--- a/tp4/parkfinv_nb.ipynb
+++ b/tp4/parkfinv_nb.ipynb
@@ -15,41 +15,41 @@
     "from pathlib import Path\n",
     "libpath=r\"../Lib/site-packages/\"\n",
     "sys.path.insert(0,libpath)\n",
-    "# print(sys.path)\n",
     "import okada4py as ok92"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723fc327",
+   "id": "0c29b0c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "class objectivefunction:\n",
-    "    'Objective function containing all the requiered informations for the optimisation'\n",
+    "    'Class containing all the requiered informations for the optimisation'\n",
     "    def __init__(self):\n",
     "        pass\n",
     " \n",
     "    def loadgps(self,fname):\n",
     "        'function loading the gps data from an input file fname'\n",
     "\n",
-    "        #self.x,self.y,self.ue,self.un,self.sige,self.sign = np.loadtxt(fname,comments=\"#\",unpack=True,dtype='f,f,f,f,f,f')\n",
-    "        #self.x,self.y = self.x.flatten(),self.y.flatten()       \n",
-    " \n",
+    "       \n",
+    "        #### COMPLETER #### \n",
     "        data = np.loadtxt(fname,comments=\"#\")\n",
-    "        self.x = data[:,0].flatten(); self.y = data[:,1].flatten()\n",
-    "        self.ue = data[:,2].flatten(); self.un = data[:,3].flatten() \n",
+    "        self.x = ; self.y = \n",
+    "        self.ue = ; self.un =  \n",
     " \n",
     "        # set depth to zero \n",
     "        self.z = np.zeros(self.x.shape)\n",
+    "        \n",
     "        # initialise data vector\n",
-    "        self.d = np.hstack([self.ue, self.un]).flatten()\n",
+    "        self.d = np.hstack([self.ue, self.un]).flatten() \n",
     "    \n",
     "    def loadfault(self,fname):\n",
     "        'function loading the fault parameter from an input file fname'\n",
     "\n",
-    "        x1,x2,x3,length,width,strike,dip = np.loadtxt(fname,comments=\"#\",unpack=True)\n",
+    "        #### COMPLETER ####        \n",
+    "        x1,x2,x3,length,width,strike,dip = \n",
     "        self.x1,self.x2,self.x3,self.length,self.width,self.strike,self.dip=np.array([x1]),np.array([x2]),np.array([x3]),np.array([length]),np.array([width]),np.array([strike]),np.array([dip])\n",
     "         \n",
     "    def gm(self,m):\n",
@@ -61,31 +61,18 @@
     "        self.slip, self.width, self.depth = m\n",
     "        self.slip, self.width, self.depth = np.array([self.slip]), np.array([self.width]), np.array([self.depth])\n",
     "        \n",
-    "        #####test####\n",
-    "        if test:\n",
-    "            self.x = np.arange(-20.0, 20.0, 5)\n",
-    "            self.y = np.arange(-20.0, 20.0, 5)\n",
-    "            self.x, self.y = np.meshgrid(self.x, self.y)\n",
-    "            self.x = self.x.flatten()\n",
-    "            self.y = self.y.flatten()\n",
-    "            self.z = np.zeros(self.x.shape) \n",
-    "        #######\n",
-    "       \n",
     "        u, d, s, flag, flag2 = ok92.okada92(self.x, self.y, self.z, self.x1, self.x2, self.x3, self.length, self.width, self.dip, self.strike, self.slip, np.array([0.0]), np.array([0.0]), mu, nu)\n",
     "        u = u.reshape((self.x.shape[0], 3))\n",
     "        self.me = u[:,0]; self.mn = u[:,1]\n",
-    "\n",
-    "        #if test:\n",
-    "        #    # save forward model\n",
-    "        #    gpsdata = np.vstack([self.x,self.y,self.me,self.mn]).T\n",
-    "        #    np.savetxt('gpsdata.txt', gpsdata, header='East(UTM)   North(UTM) Ue(m)    Un(m)',fmt=('%.5f','%.5f','%.5f','%.5f'))\n",
     "\n",
     "        return np.hstack([self.me, self.mn]).flatten()\n",
     " \n",
     "    def residual(self,m):\n",
     "        'Misfit function'\n",
     "        g=np.asarray(self.gm(m))\n",
-    "        return np.sum((self.d-g)**2)\n",
+    "\n",
+    "        #### COMPLETER ####\n",
+    "        return\n",
     "\n",
     "    def callback(self,m):\n",
     "        'function printing the parameters'\n",
@@ -96,27 +83,18 @@
     "\n",
     "    def plot(self):\n",
     "        'function plot'\n",
-    "\n",
-    "        if test == False:\n",
-    "            plt.scatter(self.x,self.y, marker='^',c='black' ,label='GPS network')\n",
-    "            plt.quiver(self.x,self.y,self.ue,self.un,color='b',label='GPS displacements',scale=.5)\n",
-    "        plt.quiver(self.x,self.y,self.me,self.mn,color='r',label='Model',scale=.5)\n",
-    "        ######\n",
-    "        # print fault trace\n",
-    "        ######\n",
-    "        fx,fy = [self.x1-sin(np.deg2rad(self.strike))*(self.length/2), self.x1+sin(np.deg2rad(self.strike))*(self.length/2) ], [self.x2-cos(np.deg2rad(self.strike))*(self.length/2),self.x2+cos(np.deg2rad(self.strike))*(self.length/2)]\n",
-    "        plt.plot(fx,fy,linewidth=3,color='black')\n",
-    "        plt.legend(loc='best')\n",
+    "        \n",
+    "        #### COMPLETER ####\n",
     "    \n",
     "    def getN(self):\n",
     "        'function returning the number of gps stations'\n",
-    "        return self.x.shape\n"
+    "        return self.x.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5080e65",
+   "id": "ec45e4d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,29 +102,20 @@
     "# 1. Open data set and fault parameters\n",
     "#-------------------------------------\n",
     "\n",
-    "wdir = './' \n",
     "inv = objectivefunction()\n",
-    "faultname=wdir + '/faults/' + 'pkfdi_seg.flt'\n",
-    "gpsname = wdir + '/gps/' + 'cgps_table.txt'\n",
-    "#gpsname = wdir + '/gps/' + 'gpsdata.txt'\n",
+    "\n",
+    "#### COMPLETER ####\n",
+    "faultname=''\n",
+    "gpsname = ''\n",
     "inv.loadgps(gpsname)\n",
     "inv.loadfault(faultname)\n",
     "print('Number of GPS stations:',inv.getN())\n",
-    "test = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9d28f77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "#-------------------------------------\n",
     "# 2. Initialise invert parameters\n",
     "#-------------------------------------\n",
     "\n",
-    "slipi = -0.5 # slip\n",
+    "slipi = 1. # slip\n",
     "wi = 10.0 # width\n",
     "di = 10.0 # depth\n",
     "\n",
@@ -156,7 +125,7 @@
     "minit = np.array([slipi, wi, di]) \n",
     "\n",
     "# set boundaries for model vector during optimisation\n",
-    "sigmam = np.array([1.,10., 10.]) # uncertainties for all parameters\n",
+    "sigmam = np.array([5.,5., 5.]) # uncertainties for all parameters\n",
     "mmax=minit+sigmam; mmin=minit-sigmam\n",
     "bnd=np.column_stack((mmin,mmax))\n",
     "\n",
@@ -168,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206e003b",
+   "id": "bc678e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
